Logtalk/examples/errors/noninstdir.lgt

:- object(noninstdir).

	% misspelt directive functor
	:- Public(predicate/0).

:- end_object.
